updated experience page

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
             </div>
             <div class="card col-12 col-md-4" style="width: 18rem;">
                 <img 
-                src="images/GraphicDesignPlant.jpg"  class="card-img-top" 
+                src="images/3. Melendez_Camryn Horror Poster_OTL-01.jpg"  class="card-img-top" 
                 alt="Graphic succulent icon" height="400px" style="object-fit:cover;">
                 <div class="card-body">
                     <h5 class="card-title">Graphic Design</h5>
