--- a/studioart.html
+++ b/studioart.html
@@ -24,102 +24,71 @@
     <div class="page-content">
 
         <div class="img-block">
-            <div class="img-crop">
-                <img src="images/StudioArt (2).jpg" alt="Monster girl painted with watercolors"> 
-            </div>
+            <img src="images/StudioArt (2).jpg" alt="Monster girl painted with watercolors"> 
             <p> Water color and colored pencil. 2016, San Diego, CA.</p>
         </div>
 
         <div class="img-block">
-            <div class="img-crop">
-                <img  src="images/StudioArt.jpg" alt="Peaches drawn with oil pastel">
-            </div>
+            <img  src="images/StudioArt.jpg" alt="Peaches drawn with oil pastel">
             <p>Oil Pastel. 2017, San Diego, CA. Displayed in the 2017 Young Art exhibition at the San Diego Museum of Art.</p>
         </div>
 
         <div class="img-block">
-            <div class="img-crop">
-                <img src="images/GreenStature.jpg" 
-                alt="Decaying copper statue">
-            </div>
+            <img src="images/GreenStature.jpg" alt="Decaying copper statue">
             <p>Acyrylic and Water. 2017, San Diego, CA. Background created with dripping water effect and copper colored paint.</p>
         </div>
 
         <div class="img-block"> 
-            <div class="img-crop">
-                <img  src="images/PurpleFLowers.jpg" 
-                alt="Black and white flowers on purple background">
-            </div>
+            <img  src="images/PurpleFLowers.jpg" alt="Black and white flowers on purple background">
             <p>Charcoal overlay on tempera. 2016, San Diego, CA. Gold flecks created by dabbing a crumples paper towel in gold paint and stamping.</p>
         </div>
         <div class="img-block">
-            <div class="img-crop">
-                <img  src="images/SadBoy.jpg" 
-                alt="Sad boy drawn in oil pastel">
-            </div>
+            <img  src="images/SadBoy.jpg" alt="Sad boy drawn in oil pastel">
             <p>Oil Pastel. 2016, San Diego, CA. Details achieved by scratching the pastel with an xacto knife, creating sharp lines.</p>
         </div>
 
         <div class="img-block">
-            <div class="img-crop">
-                <img src="images\BlueDoor.jpg" alt="Blue rusted door painting">
-            </div>
+            <img src="images\BlueDoor.jpg" alt="Blue rusted door painting">
             <p> Acrylic on Canvas Board. 2017, San Diego, CA.</p>
         </div>
 
         <div class="img-block">
-            <div class="img-crop">
-                <img src="images/GirlInMirror.jpg" alt="Girl looking in makeup mirror">
-            </div>
+            <img src="images/GirlInMirror.jpg" alt="Girl looking in makeup mirror">
             <p> Oil pastel and water color. 2016, San Diego, CA.</p>
         </div>
 
         <div class="img-block">
-            <div class="img-crop">
-                <img src="images/Books.jpg" alt="Dusty books on a shelf">
-            </div>
+            <img src="images/Books.jpg" alt="Dusty books on a shelf">
             <p> Graphite. 2016, San Diego, CA.</p>
         </div>
 
         <div class="img-block">
-            <div class="img-crop">
-                <img src="images/PinkFlowers.jpg" alt="Delicate pink flower">
-            </div>
+            <img src="images/PinkFlowers.jpg" alt="Delicate pink flower">
             <p> Water color and colored pencil. 2017, San Diego, CA.</p>
         </div>
 
         <div class="img-block">
-            <div class="img-crop">
-                <img src="images/market.jpg" alt="Clock on old decaying wooden wall">
-            </div>
+            <img src="images/market.jpg" alt="Clock on old decaying wooden wall">
             <p> Scratch board using xacto knife. 2016, San Diego, CA.</p>
         </div>
 
         <div class="img-block">
-            <div class="img-crop">
-                <img src="images/RoomColoredPencils.jpg" alt="Old dusty room with a large window and a couch">
-            </div>
+            <img src="images/RoomColoredPencils.jpg" alt="Old dusty room with a large window and a couch">
             <p> Colored Pencil. 2016, San Diego, CA. Completed in 24 hours.</p>
         </div>
 
         <div class="img-block">
-            <div class="img-crop">
-                <img src="images/Shell.jpg" alt="Colorful seashell on the shore">
-            </div>
+            <img src="images/Shell.jpg" alt="Colorful seashell on the shore">
             <p> Acrylic on paper. 2016, San Diego, CA.</p>
         </div>
 
         <div class="img-block">
-            <div class="img-crop">
-                <img src="images/Silverware.jpg" >
-            </div>
+            <img src="images/Silverware.jpg" >
             <p> Oil Pastel. 2018, San Diego, CA.</p>
         </div>
 
         <div class="img-block">
-            <div class="img-crop">
-                <img src="images/Telephone.jpg" alt="Old-fashion telephone">
-            </div>
+            <img src="images/Telephone.jpg" alt="Old-fashion telephone">
             <p> Graphite. 2018, San Diego, CA.</p>
         </div>
     </div> 
