updated skills and fonts throughout

--- a/skills.html
+++ b/skills.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>Skills</title>
-        <link rel="stylesheet" href="skills.css" title="Skills Styles"/>
+        <link rel="stylesheet" href="styles/skills.css" title="Skills Styles"/>
     </head>
     <body>
         <script type="text/javascript">
@@ -14,9 +14,30 @@
             <p ID="sub-header">Technologies, languages, and tools I have come to know and love.</p>
         </div>
         <div class="page-content">
-            <div class="side-bar">sidebar
+            <div class="side-bar">
+                <ul>
+                    <li>Languages</li>
+                        <ul>
+                            <li>Java</li>
+                            <li>HTML</li>
+                            <li>CSS</li>
+                            <li>PHP</li>
+                        </ul>
+                    <li>Version Control</li>
+                        <ul>
+                            <li>Git + GitHub</li>
+                            <li>Subversion</li>
+                        </ul>
+                </ul>
             </div>
-            <div class="main-content"> main-content</div>
+            <div class="main-content">
+                <h2>Languages</h2>
+                <li>Java</li>
+                    <p>The first industrial programming language I learned was Java. It was first introduced 
+                        in my Fundamentals of Computer Science 2 class, and I gained a more extensive knowledge
+                        in my Object Oriented Design class the following year. 
+                    </p>
+            </div>
         </div>
     </body>
 </html>
