--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 
     <!--Your CSS-->
-    <link rel="stylesheet" href="index.css" tyle="text/css">
+    <link rel="stylesheet" href="styles/index.css" tyle="text/css">
 
     <title>Camryn Melendez</title>
     <meta name="description" content="My website">
@@ -59,10 +59,6 @@
         </div>
     </nav>
 
-
-    <!-- <h1 class="header"> 
-        Camryn Melendez
-    </h1> -->
     <div class="jumbotron" >
         <h1 class="display-4">Camryn Melendez</h1>
         <p class="lead">Software Engineer + Artist</p>
