fixed styling throughout

--- a/index.html
+++ b/index.html
@@ -66,41 +66,43 @@
         <p>Student in Khoury College of Computer Sciences at Northeastern University</p>
     </div>
 
-    <div class="container" style="padding-top: 100px">
-        <div class="row">
-            <div class="card col-12 col-md-4" style="width: 18rem;">
-                <img src="images/BlueDoor.jpg" class="card-img-top" 
-                alt="Oil pastel drawing of uniquely colored apricots" height="400">
-                <div class="card-body">
-                    <h5 class="card-title">Studio Art</h5>
-                    <p class="card-text">View atwork from 2014 to present in a variety of mediums.</p>
-                    <a href="studioart.html" class="btn btn-primary">Let's go!</a>
+
+    <div class= "page-content">
+
+        <div class="container" >
+            <div class="row">
+                <div class="card col-12 col-md-4" style="width: 18rem;">
+                    <img src="images/BlueDoor.jpg" class="card-img-top" 
+                    alt="Oil pastel drawing of uniquely colored apricots" height="400">
+                    <div class="card-body">
+                        <h5 class="card-title">Studio Art</h5>
+                        <p class="card-text">View atwork from 2014 to present in a variety of mediums.</p>
+                        <a href="studioart.html" class="btn btn-primary">Let's go!</a>
+                    </div>
                 </div>
-            </div>
-            <div class="card col-12 col-md-4" style="width: 18rem;">
-                <img 
-                src="images/3. Melendez_Camryn Horror Poster_OTL-01.jpg"  class="card-img-top" 
-                alt="Graphic succulent icon" height="400px" style="object-fit:cover;">
-                <div class="card-body">
-                    <h5 class="card-title">Graphic Design</h5>
-                    <p class="card-text">Explore graphic design projects from 2016 to present.</p>
-                    <a href="graphicdesign.html" class="btn btn-primary">Let's go!</a>
+
+                <div class="card col-12 col-md-4" style="width: 18rem;">
+                    <img src="images/3. Melendez_Camryn Horror Poster_OTL-01.jpg"  class="card-img-top" 
+                        alt="Graphic succulent icon" height="400px" style="object-fit:cover;">
+                    <div class="card-body">
+                        <h5 class="card-title">Graphic Design</h5>
+                        <p class="card-text">Explore graphic design projects from 2016 to present.</p>
+                        <a href="graphicdesign.html" class="btn btn-primary">Let's go!</a>
+                    </div>
                 </div>
-            </div>
-            <div class="card col-12 col-md-4" style="width: 18rem;">
-                <img src="images/san diego.jpg" class="card-img-top" 
-                alt="Photograph of San Diego coastline" height="400">
-                <div class="card-body">
-                    <h5 class="card-title">About Me!</h5>
-                    <p class="card-text">Learn more about who I am and how I got to where I am now.</p>
-                    <a href="about.html" class="btn btn-primary">Let's go!</a>
+                <div class="card col-12 col-md-4" style="width: 18rem;">
+                    <img src="images/san diego.jpg" class="card-img-top" 
+                        alt="Photograph of San Diego coastline" height="400">
+                    <div class="card-body">
+                        <h5 class="card-title">About Me!</h5>
+                        <p class="card-text">Learn more about who I am and how I got to where I am now.</p>
+                        <a href="about.html" class="btn btn-primary">Let's go!</a>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
 
-    <h6 style="text-align-last: center ;padding: 10px; color: white">This website was created by Camryn Melendez</div>
-    </h6>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
