added js to skills

--- a/skills.html
+++ b/skills.html
@@ -65,7 +65,7 @@
             </div>
             <div class="main-content">
 
-                <p>Languages</p>
+                <p ID="languages-section">Languages</p>
                 <div class="accordion" id="accordionExample">
 
                     <div class="card">
@@ -126,13 +126,13 @@
                     </div>
                 </div>
 
-                <p>Version Control</p>
+                <p ID="vcs-section">Version Control</p>
 
                 <div class="accordion" id="accordionExample">
                     <div class="card">
                         <div class="card-header" id="headingOne">
                             <h2 class="mb-0">
-                            <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#collapseFour" aria-expanded="true" aria-controls="collapseOne">
+                            <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#collapseFour" aria-expanded="true" aria-controls="collapseFour">
                                 Git + Github
                             </button>
                             </h2>
@@ -148,7 +148,7 @@
                     <div class="card">
                         <div class="card-header" id="headingThree">
                             <h2 class="mb-0">
-                            <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseSix" aria-expanded="false" aria-controls="collapseThree">
+                            <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseSix" aria-expanded="false" aria-controls="collapseSix">
                                 Subversion
                             </button>
                             </h2>
@@ -162,13 +162,13 @@
                     </div>
                 </div>
 
-                <p>Relevant Coursework</p>
+                <p ID="coursework-section">Relevant Coursework</p>
 
                 <div class="accordion" id="accordionExample">
                     <div class="card">
                         <div class="card-header" id="headingOne">
                             <h2 class="mb-0">
-                            <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#collapseSeven" aria-expanded="true" aria-controls="collapseOne">
+                            <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseSeven" aria-expanded="true" aria-controls="collapseOne">
                                 Object Oriented Design
                             </button>
                             </h2>
@@ -221,6 +221,7 @@
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"
         integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
         crossorigin="anonymous"></script>
+
         <script src="scripts/skills.js"></script>
 
     </body>
